--- a/page2.html
+++ b/page2.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+
+	<title>Composition des puces</title>
+<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
+<h1><b>Compositions des puces GPS !</b></h1>
+<p><b>Notre technologie de Micropuce implanté GPS est fabriqué à partir de matériaux simples et sans danger pour l'organisme humain!
+Nos chercheurs ont améliorés la composition des puces car auparavant elles étaient nocives pour notre organisme 
+</br>
+</br>
+Les matériaux utilisés pour la fabrications des puces sont:
+</br>
+</br>
+- Tube de verre de Silicate
+</br>
+</br>
+
+
 
 </body>
 </html>
