--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Avec ma technologie d'implant GPS directement greffé a votre système nerveux, 
 <p>Une technologie qui pour l'époque choqua et fut délaisser par manque de connaissances.
 	Mais elle sera repris par nos chercheurs et amélioré pour obtenir nos propres technologie <em>de puces GPS.</em></p>
 </br>
-pensé et innové à partir de matériaux soigneusement choisi biodégradables. (voir matériaux utilisés=)
+pensé et innové à partir de matériaux soigneusement choisi biodégradables. <a href="page2.html">(voir matériaux utilisés=)</a>
 
 
 
